ajout de la semaine 1

--- a/Semaine_3/exercice3.css
+++ b/Semaine_3/exercice3.css
@@ -30,7 +30,6 @@ body {display: flex;
 footer {
     background: #f5c5c5;
     text-align: center;
+    padding: 2px;
         }
-        html, body {
-            height: 100%;
-        }
+    
