--- a/Semaine_4/style.css
+++ b/Semaine_4/style.css
@@ -49,3 +49,25 @@
         font-style: italic;
         font-size: 14px;
     }
+
+    h3 {
+        font-size: 18px;
+        color: #2c3e50;
+        margin: 10px;
+      padding: 15px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+    }
+    pre {
+      background: #e7dbdb;
+      padding: 15px;
+      border-radius: 8px solid #ec0909;
+      text-align: center;
+      font-size: 14px;
+      width: 60%;
+      margin: 20px auto;
+      white-space: pre-wrap;
+        word-wrap: break-word;
+        border: 1px solid #ec0909;
+    }
