--- a/lifero/styles.css
+++ b/lifero/styles.css
@@ -55,7 +55,7 @@ header {
     display: block;
 }
 .nav-bar ul li a:hover {
-    background: #0078ff;
+    background: #bfd8f5;
 }
 /* Sous-menu déroulant à droite */
 .nav-bar ul ul {
@@ -136,22 +136,40 @@ body {
 
 .btn-lien {
   display: inline-block;
-  background: #4f8cff;
-  color: #fff !important;
   padding: 8px 22px;
-  border-radius: 22px;
   text-decoration: none !important;
-  font-weight: 600;
-  box-shadow: 0 2px 8px rgba(79,140,255,0.12);
   transition: background 0.2s;
   margin-top: 8px;
 }
 
 .btn-lien:hover {
-  background: #2563eb;
-  color: #fff;
+  color: #4204ec;
 }
 
+#formulaires {
+  margin-top: 32px;
+  text-align: flex: 1 1 auto;
+}
+#formulaires h3 {
+  font-size: 1.8em;
+  margin-bottom: 12px;
+}
+#formulaires p {
+  font-size: 1.1em;
+  margin-bottom: 18px;
+  text-align: center;
+}
+
+#formulaires a {
+  text-decoration: none !important;
+  color: #2563eb;
+  font-weight: 600;
+}
+
+.form-prestation h3 {
+  font-size: 1.4em;
+  margin-bottom: 12px;
+}
 .form-prestation {
   max-width: 520px;
   margin: 0 auto;
@@ -171,9 +189,10 @@ body {
   font-size: 1em;
   background: #f8fafc;
   outline: none;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
 }
 .form-row textarea {
-  resize: vertical;
+  resize: none;
 }
 .form-row input:focus,
 .form-row textarea:focus {
@@ -183,9 +202,12 @@ body {
   width: 100%;
   text-align: center;
   margin-top: 8px;
+  background: #5285aa;
+  border: 1px solid #f8f799;
+  border-radius: 10px;
 }
 .btn-liens:hover {
-  background: #2563eb;
+  background: #a1bbf1;
   color: #fff;
 }
 
